x-IMU3-API/C/Ximu3.h

typedef enum XIMU3_ChargingStatus
{
    XIMU3_ChargingStatusNotConnected,
    XIMU3_ChargingStatusCharging,
    XIMU3_ChargingStatusChargingComplete,
    XIMU3_ChargingStatusChargingOnHold,
} XIMU3_ChargingStatus;
typedef enum XIMU3_JsonType
{
    XIMU3_JsonTypeString,
    XIMU3_JsonTypeNumber,
    XIMU3_JsonTypeBoolean,
    XIMU3_JsonTypeNull,
    XIMU3_JsonTypeObject,
    XIMU3_JsonTypeArray,
} XIMU3_JsonType;
typedef enum XIMU3_Result
{
    XIMU3_ResultOk,
    XIMU3_ResultAddrInUse,
    XIMU3_ResultAddrNotAvailable,
    XIMU3_ResultAlreadyExists,
    XIMU3_ResultArgumentListTooLong,
    XIMU3_ResultBrokenPipe,
    XIMU3_ResultConnectionAborted,
    XIMU3_ResultConnectionRefused,
    XIMU3_ResultConnectionReset,
    XIMU3_ResultDeadlock,
    XIMU3_ResultDirectoryNotEmpty,
    XIMU3_ResultExecutableFileBusy,
    XIMU3_ResultFileTooLarge,
    XIMU3_ResultHostUnreachable,
    XIMU3_ResultInterrupted,
    XIMU3_ResultInvalidData,
    XIMU3_ResultInvalidInput,
    XIMU3_ResultIsADirectory,
    XIMU3_ResultNetworkDown,
    XIMU3_ResultNetworkUnreachable,
    XIMU3_ResultNotADirectory,
    XIMU3_ResultNotConnected,
    XIMU3_ResultNotFound,
    XIMU3_ResultNotSeekable,
    XIMU3_ResultOther,
    XIMU3_ResultOutOfMemory,
    XIMU3_ResultPermissionDenied,
    XIMU3_ResultReadOnlyFilesystem,
    XIMU3_ResultResourceBusy,
    XIMU3_ResultStaleNetworkFileHandle,
    XIMU3_ResultStorageFull,
    XIMU3_ResultTimedOut,
    XIMU3_ResultTooManyLinks,
    XIMU3_ResultUnexpectedEof,
    XIMU3_ResultUnsupported,
    XIMU3_ResultWouldBlock,
    XIMU3_ResultWriteZero,
    XIMU3_ResultUnknownError,
} XIMU3_Result;
typedef enum XIMU3_ConnectionType
{
    XIMU3_ConnectionTypeUsb,
    XIMU3_ConnectionTypeSerial,
    XIMU3_ConnectionTypeTcp,
    XIMU3_ConnectionTypeUdp,
    XIMU3_ConnectionTypeBluetooth,
    XIMU3_ConnectionTypeFile,
    XIMU3_ConnectionTypeMux,
} XIMU3_ConnectionType;
typedef enum XIMU3_FileConverterStatus
{
    XIMU3_FileConverterStatusInProgress,
    XIMU3_FileConverterStatusComplete,
} XIMU3_FileConverterStatus;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_CharArrays
{
    char (*array)[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t length;
    uint32_t capacity;
} XIMU3_CharArrays;
typedef struct XIMU3_CommandMessage
{
    char json[XIMU3_CHAR_ARRAY_SIZE];
    char key[XIMU3_CHAR_ARRAY_SIZE];
    char value[XIMU3_CHAR_ARRAY_SIZE];
    enum XIMU3_JsonType value_type;
    char error[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_CommandMessage;
typedef struct XIMU3_CommandMessages
{
    struct XIMU3_CommandMessage *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_CommandMessages;
typedef struct XIMU3_UsbConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_UsbConnectionConfig;
typedef struct XIMU3_SerialConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t baud_rate;
    bool rts_cts_enabled;
} XIMU3_SerialConnectionConfig;
typedef struct XIMU3_TcpConnectionConfig
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t port;
} XIMU3_TcpConnectionConfig;
typedef struct XIMU3_UdpConnectionConfig
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t send_port;
    uint16_t receive_port;
} XIMU3_UdpConnectionConfig;
typedef struct XIMU3_BluetoothConnectionConfig
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_BluetoothConnectionConfig;
typedef struct XIMU3_FileConnectionConfig
{
    char file_path[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_FileConnectionConfig;
typedef void (*XIMU3_CallbackResult)(enum XIMU3_Result data, void *context);
typedef struct XIMU3_PingResponse
{
    char interface[XIMU3_CHAR_ARRAY_SIZE];
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_PingResponse;
typedef void (*XIMU3_CallbackPingResponseC)(struct XIMU3_PingResponse data, void *context);
typedef void (*XIMU3_CallbackCommandMessages)(struct XIMU3_CommandMessages data, void *context);
typedef struct XIMU3_Statistics
{
    uint64_t data_total;
    uint32_t data_rate;
    uint64_t message_total;
    uint32_t message_rate;
    uint64_t error_total;
    uint32_t error_rate;
} XIMU3_Statistics;
typedef struct XIMU3_InertialMessage
{
    uint64_t timestamp;
    float gyroscope_x;
    float gyroscope_y;
    float gyroscope_z;
    float accelerometer_x;
    float accelerometer_y;
    float accelerometer_z;
} XIMU3_InertialMessage;
typedef struct XIMU3_MagnetometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_MagnetometerMessage;
typedef struct XIMU3_HighGAccelerometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_HighGAccelerometerMessage;
typedef struct XIMU3_QuaternionMessage
{
    uint64_t timestamp;
    float w;
    float x;
    float y;
    float z;
} XIMU3_QuaternionMessage;
typedef struct XIMU3_RotationMatrixMessage
{
    uint64_t timestamp;
    float xx;
    float xy;
    float xz;
    float yx;
    float yy;
    float yz;
    float zx;
    float zy;
    float zz;
} XIMU3_RotationMatrixMessage;
typedef struct XIMU3_EulerAnglesMessage
{
    uint64_t timestamp;
    float roll;
    float pitch;
    float yaw;
} XIMU3_EulerAnglesMessage;
typedef struct XIMU3_LinearAccelerationMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_LinearAccelerationMessage;
typedef struct XIMU3_EarthAccelerationMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_EarthAccelerationMessage;
typedef struct XIMU3_AhrsStatusMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_AhrsStatusMessage;
typedef struct XIMU3_SerialAccessoryMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_SerialAccessoryMessage;
typedef struct XIMU3_TemperatureMessage
{
    uint64_t timestamp;
    float temperature;
} XIMU3_TemperatureMessage;
typedef struct XIMU3_BatteryMessage
{
    uint64_t timestamp;
    float percentage;
    float voltage;
    float charging_status;
} XIMU3_BatteryMessage;
typedef struct XIMU3_RssiMessage
{
    uint64_t timestamp;
    float percentage;
    float power;
} XIMU3_RssiMessage;
typedef struct XIMU3_NotificationMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_NotificationMessage;
typedef struct XIMU3_ErrorMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_ErrorMessage;
typedef void (*XIMU3_CallbackStatistics)(struct XIMU3_Statistics data, void *context);
typedef void (*XIMU3_CallbackInertialMessage)(struct XIMU3_InertialMessage data, void *context);
typedef void (*XIMU3_CallbackMagnetometerMessage)(struct XIMU3_MagnetometerMessage data, void *context);
typedef void (*XIMU3_CallbackHighGAccelerometerMessage)(struct XIMU3_HighGAccelerometerMessage data, void *context);
typedef void (*XIMU3_CallbackQuaternionMessage)(struct XIMU3_QuaternionMessage data, void *context);
typedef void (*XIMU3_CallbackRotationMatrixMessage)(struct XIMU3_RotationMatrixMessage data, void *context);
typedef void (*XIMU3_CallbackEulerAnglesMessage)(struct XIMU3_EulerAnglesMessage data, void *context);
typedef void (*XIMU3_CallbackLinearAccelerationMessage)(struct XIMU3_LinearAccelerationMessage data, void *context);
typedef void (*XIMU3_CallbackEarthAccelerationMessage)(struct XIMU3_EarthAccelerationMessage data, void *context);
typedef void (*XIMU3_CallbackAhrsStatusMessage)(struct XIMU3_AhrsStatusMessage data, void *context);
typedef void (*XIMU3_CallbackSerialAccessoryMessage)(struct XIMU3_SerialAccessoryMessage data, void *context);
typedef void (*XIMU3_CallbackTemperatureMessage)(struct XIMU3_TemperatureMessage data, void *context);
typedef void (*XIMU3_CallbackBatteryMessage)(struct XIMU3_BatteryMessage data, void *context);
typedef void (*XIMU3_CallbackRssiMessage)(struct XIMU3_RssiMessage data, void *context);
typedef void (*XIMU3_CallbackNotificationMessage)(struct XIMU3_NotificationMessage data, void *context);
typedef void (*XIMU3_CallbackErrorMessage)(struct XIMU3_ErrorMessage data, void *context);
typedef struct XIMU3_Device
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    enum XIMU3_ConnectionType connection_type;
    struct XIMU3_UsbConnectionConfig usb_connection_config;
    struct XIMU3_SerialConnectionConfig serial_connection_config;
    struct XIMU3_TcpConnectionConfig tcp_connection_config;
    struct XIMU3_UdpConnectionConfig udp_connection_config;
    struct XIMU3_BluetoothConnectionConfig bluetooth_connection_config;
    struct XIMU3_FileConnectionConfig file_connection_config;
    struct XIMU3_MuxConnectionConfig *mux_connection_config;
} XIMU3_Device;
typedef struct XIMU3_Devices
{
    struct XIMU3_Device *array;
    uint32_t length;
    uint32_t capacity;
} XIMU3_Devices;
typedef struct XIMU3_FileConverterProgress
{
    enum XIMU3_FileConverterStatus status;
    float percentage;
    uint64_t bytes_processed;
    uint64_t bytes_total;
} XIMU3_FileConverterProgress;
typedef void (*XIMU3_CallbackFileConverterProgress)(struct XIMU3_FileConverterProgress data, void *context);
typedef void (*XIMU3_CallbackDevices)(struct XIMU3_Devices data, void *context);
typedef struct XIMU3_NetworkAnnouncementMessage
{
    char device_name[XIMU3_CHAR_ARRAY_SIZE];
    char serial_number[XIMU3_CHAR_ARRAY_SIZE];
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t tcp_port;
    uint16_t udp_send;
    uint16_t udp_receive;
    int32_t rssi;
    int32_t battery;
    enum XIMU3_ChargingStatus charging_status;
} XIMU3_NetworkAnnouncementMessage;
typedef void (*XIMU3_CallbackNetworkAnnouncementMessageC)(struct XIMU3_NetworkAnnouncementMessage data, void *context);
void XIMU3_char_arrays_free(struct XIMU3_CharArrays char_arrays);
enum XIMU3_ChargingStatus XIMU3_charging_status_from_float(float status);
const char *XIMU3_charging_status_to_string(enum XIMU3_ChargingStatus status);
struct XIMU3_CommandMessage XIMU3_command_message_parse(const char *json);
struct XIMU3_Connection *XIMU3_connection_new_usb(struct XIMU3_UsbConnectionConfig config);
struct XIMU3_Connection *XIMU3_connection_new_serial(struct XIMU3_SerialConnectionConfig config);
struct XIMU3_Connection *XIMU3_connection_new_tcp(struct XIMU3_TcpConnectionConfig config);
struct XIMU3_Connection *XIMU3_connection_new_udp(struct XIMU3_UdpConnectionConfig config);
struct XIMU3_Connection *XIMU3_connection_new_bluetooth(struct XIMU3_BluetoothConnectionConfig config);
struct XIMU3_Connection *XIMU3_connection_new_file(struct XIMU3_FileConnectionConfig config);
void XIMU3_connection_free(struct XIMU3_Connection *connection);
enum XIMU3_Result XIMU3_connection_open(struct XIMU3_Connection *connection);
void XIMU3_connection_open_async(struct XIMU3_Connection *connection, XIMU3_CallbackResult callback, void *context);
void XIMU3_connection_close(struct XIMU3_Connection *connection);
struct XIMU3_PingResponse XIMU3_connection_ping(struct XIMU3_Connection *connection, uint32_t retries, uint32_t timeout);
void XIMU3_connection_ping_async(struct XIMU3_Connection *connection, uint32_t retries, uint32_t timeout, XIMU3_CallbackPingResponseC callback, void *context);
struct XIMU3_CommandMessages XIMU3_connection_send_commands(struct XIMU3_Connection *connection, const char *const *commands, uint32_t length, uint32_t retries, uint32_t timeout);
void XIMU3_connection_send_commands_async(struct XIMU3_Connection *connection, const char *const *commands, uint32_t length, uint32_t retries, uint32_t timeout, XIMU3_CallbackCommandMessages callback, void *context);
enum XIMU3_ConnectionType XIMU3_connection_get_type(struct XIMU3_Connection *connection);
struct XIMU3_Statistics XIMU3_connection_get_statistics(struct XIMU3_Connection *connection);
uint64_t XIMU3_connection_add_statistics_callback(struct XIMU3_Connection *connection, XIMU3_CallbackStatistics callback, void *context);
uint64_t XIMU3_connection_add_inertial_callback(struct XIMU3_Connection *connection, XIMU3_CallbackInertialMessage callback, void *context);
uint64_t XIMU3_connection_add_magnetometer_callback(struct XIMU3_Connection *connection, XIMU3_CallbackMagnetometerMessage callback, void *context);
uint64_t XIMU3_connection_add_high_g_accelerometer_callback(struct XIMU3_Connection *connection, XIMU3_CallbackHighGAccelerometerMessage callback, void *context);
uint64_t XIMU3_connection_add_quaternion_callback(struct XIMU3_Connection *connection, XIMU3_CallbackQuaternionMessage callback, void *context);
uint64_t XIMU3_connection_add_rotation_matrix_callback(struct XIMU3_Connection *connection, XIMU3_CallbackRotationMatrixMessage callback, void *context);
uint64_t XIMU3_connection_add_euler_angles_callback(struct XIMU3_Connection *connection, XIMU3_CallbackEulerAnglesMessage callback, void *context);
uint64_t XIMU3_connection_add_linear_acceleration_callback(struct XIMU3_Connection *connection, XIMU3_CallbackLinearAccelerationMessage callback, void *context);
uint64_t XIMU3_connection_add_earth_acceleration_callback(struct XIMU3_Connection *connection, XIMU3_CallbackEarthAccelerationMessage callback, void *context);
uint64_t XIMU3_connection_add_ahrs_status_callback(struct XIMU3_Connection *connection, XIMU3_CallbackAhrsStatusMessage callback, void *context);
uint64_t XIMU3_connection_add_serial_accessory_callback(struct XIMU3_Connection *connection, XIMU3_CallbackSerialAccessoryMessage callback, void *context);
uint64_t XIMU3_connection_add_temperature_callback(struct XIMU3_Connection *connection, XIMU3_CallbackTemperatureMessage callback, void *context);
uint64_t XIMU3_connection_add_battery_callback(struct XIMU3_Connection *connection, XIMU3_CallbackBatteryMessage callback, void *context);
uint64_t XIMU3_connection_add_rssi_callback(struct XIMU3_Connection *connection, XIMU3_CallbackRssiMessage callback, void *context);
uint64_t XIMU3_connection_add_notification_callback(struct XIMU3_Connection *connection, XIMU3_CallbackNotificationMessage callback, void *context);