x-IMU3-API/CSharp/x-IMU3/CApi.cs

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackStatistics(XIMU3_Statistics data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackInertialMessage(XIMU3_InertialMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackMagnetometerMessage(XIMU3_MagnetometerMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackQuaternionMessage(XIMU3_QuaternionMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackRotationMatrixMessage(XIMU3_RotationMatrixMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackEulerAnglesMessage(XIMU3_EulerAnglesMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackLinearAccelerationMessage(XIMU3_LinearAccelerationMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackEarthAccelerationMessage(XIMU3_EarthAccelerationMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackAhrsStatusMessage(XIMU3_AhrsStatusMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackHighGAccelerometerMessage(XIMU3_HighGAccelerometerMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackTemperatureMessage(XIMU3_TemperatureMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackBatteryMessage(XIMU3_BatteryMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackRssiMessage(XIMU3_RssiMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackSerialAccessoryMessage(XIMU3_SerialAccessoryMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackNotificationMessage(XIMU3_NotificationMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackErrorMessage(XIMU3_ErrorMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackFileConverterProgress(XIMU3_FileConverterProgress data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackNetworkAnnouncementMessageC(XIMU3_NetworkAnnouncementMessage data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackDevices(XIMU3_Devices data, IntPtr context);
        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void XIMU3_CallbackEndOfFile(IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_char_arrays_free(XIMU3_CharArrays char_arrays);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_ChargingStatus XIMU3_charging_status_from_float(float charging_status);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_charging_status_to_string(XIMU3_ChargingStatus charging_status);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_CommandMessage XIMU3_command_message_parse(IntPtr json);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_usb(XIMU3_UsbConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_serial(XIMU3_SerialConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_tcp(XIMU3_TcpConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_udp(XIMU3_UdpConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_bluetooth(XIMU3_BluetoothConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr XIMU3_connection_new_file(XIMU3_FileConnectionInfo connection_info);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_connection_free(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_Result XIMU3_connection_open(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_connection_open_async(IntPtr connection, XIMU3_CallbackResult callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_connection_close(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_PingResponse XIMU3_connection_ping(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_connection_ping_async(IntPtr connection, XIMU3_CallbackPingResponseC callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_CharArrays XIMU3_connection_send_commands(IntPtr connection, IntPtr commands, UInt32 length, UInt32 retries, UInt32 timeout);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern void XIMU3_connection_send_commands_async(IntPtr connection, IntPtr commands, UInt32 length, UInt32 retries, UInt32 timeout, XIMU3_CallbackCharArrays callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_ConnectionType XIMU3_connection_get_type(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_UsbConnectionInfo XIMU3_connection_get_info_usb(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_SerialConnectionInfo XIMU3_connection_get_info_serial(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_TcpConnectionInfo XIMU3_connection_get_info_tcp(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_UdpConnectionInfo XIMU3_connection_get_info_udp(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_BluetoothConnectionInfo XIMU3_connection_get_info_bluetooth(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_FileConnectionInfo XIMU3_connection_get_info_file(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern XIMU3_Statistics XIMU3_connection_get_statistics(IntPtr connection);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_decode_error_callback(IntPtr connection, XIMU3_CallbackDecodeError callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_statistics_callback(IntPtr connection, XIMU3_CallbackStatistics callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_inertial_callback(IntPtr connection, XIMU3_CallbackInertialMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_magnetometer_callback(IntPtr connection, XIMU3_CallbackMagnetometerMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_quaternion_callback(IntPtr connection, XIMU3_CallbackQuaternionMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_rotation_matrix_callback(IntPtr connection, XIMU3_CallbackRotationMatrixMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_euler_angles_callback(IntPtr connection, XIMU3_CallbackEulerAnglesMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_linear_acceleration_callback(IntPtr connection, XIMU3_CallbackLinearAccelerationMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_earth_acceleration_callback(IntPtr connection, XIMU3_CallbackEarthAccelerationMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_ahrs_status_callback(IntPtr connection, XIMU3_CallbackAhrsStatusMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_high_g_accelerometer_callback(IntPtr connection, XIMU3_CallbackHighGAccelerometerMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_temperature_callback(IntPtr connection, XIMU3_CallbackTemperatureMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_battery_callback(IntPtr connection, XIMU3_CallbackBatteryMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_rssi_callback(IntPtr connection, XIMU3_CallbackRssiMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_serial_accessory_callback(IntPtr connection, XIMU3_CallbackSerialAccessoryMessage callback, IntPtr context);
        [DllImport("ximu3", CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt64 XIMU3_connection_add_notification_callback(IntPtr connection, XIMU3_CallbackNotificationMessage callback, IntPtr context);
